# OddscheckerParser

./: pyproject.toml
oddcheckerupworkparser/: oddchecker_upwork_parser.ipynb
